[package]

name = "chipmunk-sys"
version = "0.0.4"
authors = ["Ty Overby <ty@pre-alpha.com>"]
license = "MIT"

repository = "https://github.com/TyOverby/chipmunk-sys"
description = "System level bindings to the chipmunk 2d game engine."

build = "build.rs"

lib = "chipmunk_sys"

[dependencies]
libc = "*"

[build-dependencies]
gcc = "*"
